--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                     <navigationItem key="navigationItem" title="Checklists" id="hrb-X5-DDM">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="DcH-ux-s8f">
                             <connections>
-                                <action selector="addItem" destination="UYI-He-fMc" id="f5D-9V-7io"/>
+                                <segue destination="Rbw-dY-WnM" kind="show" id="B44-Pt-GJU"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -52,6 +52,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kih-h3-JjV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="727.20000000000005" y="136.28185907046478"/>
+        </scene>
+        <!--Add Item-->
+        <scene sceneID="rwj-ag-ZBh">
+            <objects>
+                <tableViewController id="Rbw-dY-WnM" customClass="AddItemViewController" customModule="Checklists" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="3qc-0l-lEC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="epO-C0-5Ju">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="epO-C0-5Ju" id="fLT-tl-kQz">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Rbw-dY-WnM" id="tc4-cZ-c6k"/>
+                            <outlet property="delegate" destination="Rbw-dY-WnM" id="8df-Aq-cfV"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Add Item" id="XpD-ml-V5N">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="iWb-j0-nkB" userLabel="Cancel">
+                            <connections>
+                                <action selector="cancel" destination="Rbw-dY-WnM" id="Xba-pt-tcQ"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="HxY-RP-GkZ">
+                            <connections>
+                                <action selector="done" destination="Rbw-dY-WnM" id="Uiu-te-qKT"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s7I-oF-IS1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1402" y="136"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XCQ-XO-be7">
